tests/ui/consts/erroneous_type_in_const_return_value.stderr
error[E0412]: cannot find type `Sum` in this scope
  --> $DIR/erroneous_type_in_const_return_value.rs:6:22
   |
LL |     UnusedByTheConst(Sum),
   |                      ^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::iter::Sum;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
